name:                ServantServer
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/ServantServer#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , servant > 0.4
                     , servant-server > 0.4
                     , servant-client > 0.4
                     , servant-docs > 0.4
                     , servant-mock > 0.4
                     , servant-JuicyPixels
                     , JuicyPixels
                     , stm
                     , either
                     , lackey
                     , wai
                     , warp
                     , aeson
                     , time
                     , string-conversions
  default-language:    Haskell2010

executable ServantServer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ServantServer
  default-language:    Haskell2010

test-suite ServantServer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ServantServer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/DanielCardonaRojas/ServantServer
